@@ -152,7 +152,7 @@ extends KnockoutAlleleProcessor
 	    mutationTypeKeys.add(key);
 	}
 	koAllele.setMutationTypes(mutationTypeKeys);
-
+	koAllele.setCollection(Constants.COLLECTION_EUCOMM);
 	// //////////////////////////////////////////////////////////////
 	// get the NEXT allele symbol sequence number and letter
 	// //////////////////////////////////////////////////////////////
